better example config

--- a/config.ini.example
+++ b/config.ini.example
@@ -5,11 +5,11 @@ LogFile: plex_webhook_redirector.log
 FlaskPort: 8765
 
 [PLEX]
-TrackedPlayerUUIDs: f868bd73e2f99f3a39e0b65d5306142f
+TrackedPlayerUUIDs: 0000000,1111111,2222_android
 LocalPlayersOnly: true
 
 [WEBHOOKS]
-MediaPlayWebhook: http://192.168.200.193:7070/v1/event/TRIGGER100
-MediaPauseWebhook: http://192.168.200.193:7070/v1/event/TRIGGER103
-MediaResumeWebhook: http://192.168.200.193:7070/v1/event/TRIGGER102
-MediaStopWebhook: http://192.168.200.193:7070/v1/event/TRIGGER101
+MediaPlayWebhook: http://webhook:port/event/play
+MediaPauseWebhook: http://webhook:port/event/pause
+MediaResumeWebhook: http://webhook:port/event/resume
+MediaStopWebhook: http://webhook:port/event/stop
