--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,12 +1,15 @@
 services:
-  plex-webhook-redirector:
-    build:
-      context: .
-      dockerfile: Dockerfile
-    container_name: plex-webhook-redirector
-    restart: unless-stopped
-    ports:
-      - 8765:8765
-    volumes:
-      - ./config.ini:/app/config.ini
-      - ./plex_webhook_redirector.log:/app/plex_webhook_redirector.log
+    plex-webhook-redirector:
+        build:
+            context: .
+            dockerfile: Dockerfile
+        container_name: plex-webhook-redirector
+        restart: unless-stopped
+        ports:
+            - "8765:8765"
+        volumes:
+            - ./.env:/app/.env
+            - ./plex_webhook_redirector.log:/app/plex_webhook_redirector.log
+        environment:
+            - TZ=UTC # Set your preferred timezone here
+            - LOG_FILE=/app/logs/plex_webhook_redirector.log
