Update .env.example file with consistent key formatting and new logging options! 🎉
- Changed `LogFile:` to `LOG_FILE=` for consistent key formatting. 🐍
- Updated `FlaskPort:` to `FLASK_PORT=` to maintain uniformity across environment variable naming. 🚀
- Replaced `TrackedPlayerUUIDs:` and `LocalPlayersOnly:` with `TRACKED_PLAYER_UUIDS=` and `LOCAL_PLAYERS_ONLY=` for clarity and consistency. 👀
- Adjusted MQTT settings from `Broker:` and `Topic:` to `MQTT_BROKER=` and `MQTT_TOPIC=` to avoid any confusion with environment variable naming. 🙌
- Added a new `LOG_FILE` variable to specify the log file for better logging practices. 📜

These changes improve clarity and enforce a consistent style for environment variables, making it easier for developers to understand configuration options without guessing! 🧙‍♂️✨

--- a/.env.example
+++ b/.env.example
@@ -1,13 +1,13 @@
+# Logging
+LOG_FILE=plex_webhook_redirector.log
 
-LogFile: plex_webhook_redirector.log
-FlaskPort: 8765
+# Server
+FLASK_PORT=8765
 
+# Plex
+TRACKED_PLAYER_UUIDS=1111,1111,1111
+LOCAL_PLAYERS_ONLY=true
 
-[PLEX]
-TrackedPlayerUUIDs: 16dcc64dd25d1c3b5730bed5a66fc075,97B69419-C7AB-4020-A4A2-39CCDC7151F3,415FC4D4-D345-4676-B0E2-57BA7CD1C498
-LocalPlayersOnly: true
-
-[MQTT]
-Broker: 192.168.200.8
-Topic: reedazawa/media/plex
-
+# MQTT
+MQTT_BROKER=192.168.0.0
+MQTT_TOPIC=media/plex
